--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>SushiMan</title>
 </head>
+
 <body>
     <header>
         <nav class="header__nav">
@@ -57,17 +59,18 @@
             <div class="hero-content-info">
                 <h1>Feel the taste of Japanese Food</h1>
                 <p>Feel the taste of the most popular Japanese food from anywhere and anytime.</p>
+                <div class="hero-content__buttons">
+                    <button class="hero-content__order-button">
+                        Order Now
+                    </button>
+                    <button class="hero-content__play-button">
+                        <img src="assets/play-circle.svg" alt="play">
+                        How to Order
+                    </button>
+                </div>
             </div>
 
-            <div class="hero-contant__buttons">
-                <button class="hero-content__order-button">
-                    Order Now
-                </button>
-                <button class="hero-content__play-button">
-                    <img src="assets/play-circle.svg" alt="play">
-                    How to Order
-                </button>
-            </div>
+
             <div class="hero-content__testimonial">
                 <div class="hero_content__customer flex-center">
                     <h4>24 <span>k+</span></h4>
@@ -76,13 +79,42 @@
 
                 <div class="hero-content__review">
                     <img src="assets/user.png" alt="user">
-                    <p>"this is  the best Japanese food delivery service that ever existed."</p>
+                    <p>"this is the best Japanese food delivery service that ever existed."</p>
 
                 </div>
 
             </div>
         </div>
     </section>
+
+    <section class="about-us" id="about-us">
+        <div class="about-us__image">
+            <div class="about-us__image-sushi3">
+                <img src="assets/sushi-3.png" alt="sushi">
+            </div>
+
+            <button class="about-us__button">
+                Learn More
+                <img src="assets/arrow-up-right.svg" alt="Learn More">
+            </button>
+            <div class="about-us__image-sushi2">
+                <img src="assets/sushi-2.png" alt="sushi">
+            </div>
+        </div>
+        <div class="about-us__content" data-aos="fade-left">
+            <p class="sushi__subtitle">About Us / 私たちに関しては</p>
+            <h3 class="sushi__title">
+                Our mission is to bring true Japanese flavours to you.
+            </h3>
+            <p class="sushi__description">
+                We will continue to provide the experience of Omotenashi, the Japanese
+                mindset of hospitality, with our shopping and dining for our
+                customers.
+            </p>
+        </div>
+    </section>
+
     <script src="js/script.js" type="module"></script>
 </body>
+
 </html>
